--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-social-icons": "^6.15.0"
   },
   "devDependencies": {
     "@types/node": "^20",
